<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:background="@color/ax_error_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp"/>

        <!-- Icon -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ax_error_alert"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/error_title"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end" />

        <!-- Error Message -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/ax_error_library_error_title"
            android:textSize="24sp"
            android:textColor="@color/ax_error_text_color_dark"
            android:textStyle="bold"
            android:fontFamily="@font/ax_error_s_core_dream_6_bold"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_center"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

        <!-- Error Sub Message -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ax_error_library_error_sub_title"
            android:textSize="16sp"
            android:textColor="@color/ax_error_text_color_light"
            android:lineSpacingExtra="2dp"
            android:fontFamily="@font/ax_error_s_core_dream_4_regular"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_center"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <!-- 새로고침 버튼 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:paddingVertical="12dp"
            android:paddingHorizontal="24dp"
            android:background="@drawable/bg_ax_error_refresh_button"
            app:layout_constraintTop_toBottomOf="@id/error_sub_title"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_refresh_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ax_error_library_refresh_button_text"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/ax_error_s_core_dream_4_regular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_refresh_icon"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_refresh_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:paddingVertical="4dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ax_error_refresh_x4"
                app:layout_constraintTop_toTopOf="@id/btn_refresh_text"
                app:layout_constraintBottom_toBottomOf="@id/btn_refresh_text"
                app:layout_constraintStart_toEndOf="@id/btn_refresh_text"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Error Log Text (ScrollView) -->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view_error_log_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_min="80dp"
            android:layout_marginTop="36dp"
            android:fadingEdgeLength="12dp"
            android:requiresFadingEdge="none"
            android:padding="6dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:overScrollMode="never"
            android:background="@drawable/bg_ax_error_log"
            app:layout_constrainedWidth="true"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/btn_refresh"
            app:layout_constraintBottom_toTopOf="@id/ll_copy_button_and_guide_message"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end">

            <!-- Error Log Text -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/error_log_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:textColor="@color/ax_error_text_color_very_light"
                android:editable="false"
                android:inputType="none"
                android:textIsSelectable="true"
                android:background="@android:color/transparent"
                tools:text="@string/ax_error_library_error_log_text_sample" />

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/ll_copy_button_and_guide_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="36dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/scroll_view_error_log_text"
            app:layout_constraintBottom_toTopOf="@id/barrier_help_button"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Copy Button Guide Message -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/copy_button_guide_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ax_error_library_copy_button_guide_message"
                android:textSize="11sp"
                android:textColor="@color/ax_error_text_color_light"
                android:fontFamily="@font/ax_error_s_core_dream_4_regular"/>

            <!-- 복사하기 버튼 -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_copy_error_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="16dp"
                android:text="@string/ax_error_library_copy_error_log_button_text"
                android:textColor="@color/ax_error_primary"
                android:textStyle="bold"
                android:background="@drawable/bg_ax_error_copy_error_log_button"
                android:fontFamily="@font/ax_error_s_core_dream_6_bold"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="text_help_left,btn_help"
            app:barrierDirection="top"/>

        <!-- 문의하기 버튼 왼쪽의 텍스트 -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_help_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/ax_error_library_text_help_left"
            android:textSize="16sp"
            android:textColor="@color/ax_error_text_color_light"
            android:fontFamily="@font/ax_error_s_core_dream_4_regular"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@id/btn_help"
            app:layout_constraintBottom_toBottomOf="@id/btn_help"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/btn_help"/>

        <!-- 문의하기 버튼 -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="24dp"
            android:text="@string/ax_error_library_help_button_text"
            android:textSize="16sp"
            android:textColor="@color/ax_error_primary"
            android:background="@drawable/bg_ax_error_help_button"
            android:fontFamily="@font/ax_error_s_core_dream_4_regular"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/text_help_left"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>